[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "devenv-cache"
version = "0.1.0"
description = "Local dependency and context cache for AI coding assistants"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
devenv-cache = "devenv_cache.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
